<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/Toolbar.TitleText" />
    </android.support.design.widget.AppBarLayout>

    <!-- 学生体验流程 -->
    <RelativeLayout
        android:id="@+id/student_tip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:visibility="gone">

        <ImageView
            android:id="@+id/student_tip_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:background="@drawable/ic_student_tip" />

        <TextView
            android:id="@+id/student_handbook_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/student_tip_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/student_handbook_tip"
            android:textColor="@color/color_black_333333"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/student_handbook_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/student_step1" />

        <TextView
            android:id="@+id/step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/step1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/student_step2" />

        <TextView
            android:id="@+id/step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/step2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/student_step3" />

        <TextView
            android:id="@+id/step4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/step3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/student_step4" />

    </RelativeLayout>

    <!-- 学生预约成功布局 -->
    <RelativeLayout
        android:id="@+id/booked_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/book_success_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_book_success" />

        <TextView
            android:id="@+id/book_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_success_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/book_class_success"
            android:textColor="@color/color_black_333333"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/how_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_success"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/how_to_login"
            android:textColor="@color/color_blue_006AED"
            android:textSize="15sp" />

    </RelativeLayout>

    <!-- 老师主页提示 -->
    <ImageView
        android:id="@+id/book_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_no_book_logo"
        android:visibility="gone" />

    <TextView
        android:id="@+id/teacher_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/no_book_tip"
        android:textColor="@color/color_gray_666666"
        android:textSize="15sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/book_class_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/nim_message_button_bottom_send_selector"
        android:text="loading"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/net_detect_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/net_detect_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/color_gray_666666"
            android:textSize="10sp" />
    </LinearLayout>

</RelativeLayout>